<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.akivabamberger.balloflightcontroller.ImageUploadFragment">

    <Button
        android:id="@+id/rotateButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/gridLayout"
        android:layout_alignRight="@+id/gridLayout"
        android:layout_above="@+id/flipButton"
        android:text="@string/rotate_90" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/drawButton"
        android:layout_alignStart="@+id/drawButton"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/drawButton"
        android:text="@string/gallery" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="400dp"
        android:layout_height="69dp"
        android:layout_marginTop="69dp"
        android:text="@string/not_connected_to_ball"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="fill_parent"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/drawButton"
        android:orientation="vertical"
        android:src="@drawable/dickbutt">


    </ImageView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:id="@+id/gridLayout"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView">

    </RelativeLayout>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_above="@+id/uploadButton"
        android:layout_alignRight="@+id/gridLayout"
        android:layout_alignEnd="@+id/gridLayout" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/gridLayout"
        android:layout_alignLeft="@+id/flipButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/gridLayout"
        android:layout_alignStart="@+id/flipButton"
        android:text="@string/upload" />

    <Button
        android:id="@+id/drawButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/gridLayout"
        android:layout_alignRight="@+id/gridLayout"
        android:layout_below="@+id/textView"
        android:text="@string/draw" />

    <Button
        android:id="@+id/flipButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/gridLayout"
        android:layout_alignRight="@+id/gridLayout"
        android:layout_above="@+id/resetButton"
        android:layout_marginBottom="100dp"
        android:text="@string/flip" />

</RelativeLayout>

